--- a/Debugger/Base.lproj/Main.storyboard
+++ b/Debugger/Base.lproj/Main.storyboard
@@ -321,6 +321,9 @@
                                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Nlg-jJ-tvd">
                                                         <rect key="frame" x="233.5" y="0.0" width="66.5" height="30"/>
                                                         <state key="normal" title="Save"/>
+                                                        <connections>
+                                                            <action selector="saveButtonTapped:" destination="ppW-79-4Tc" eventType="touchUpInside" id="gTx-zS-mlQ"/>
+                                                        </connections>
                                                     </button>
                                                 </subviews>
                                             </stackView>
@@ -359,6 +362,7 @@
                         <outlet property="addButton" destination="6wl-8F-vV5" id="0HI-H8-lii"/>
                         <outlet property="bgImageView" destination="MGd-iR-91m" id="27W-0K-8i2"/>
                         <outlet property="controls" destination="O1A-fE-CT1" id="4lQ-p9-ZOZ"/>
+                        <outlet property="nameTextField" destination="L5T-ku-Uc4" id="EOD-o1-k8Q"/>
                         <outlet property="outOfAreaLabel" destination="ntg-pf-ady" id="YuV-by-5r9"/>
                         <outlet property="playArea" destination="XZ6-nc-kdd" id="daP-pl-hpR"/>
                         <outlet property="removeButton" destination="Ic0-b7-FVN" id="vsw-0a-Qfb"/>
